# FedEx

./: .gitignore  README.md  pyproject.toml
docs/fedex_collections/: upload-documents.json
docs/fixtures/: abconnect results.csv
examples/: preshipment_commercial_invoice.py
src/fedex_sdk/: __init__.py  addresses.py  client.py  config.py  documents.py  errors.py  models.py  multipart.py  pickups.py  rates.py  transport.py
tests/: test_client.py
