[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fedex-api-sdk"
version = "0.1.0"
description = "A lightweight Python SDK for FedEx REST APIs."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "FedEx SDK Contributors"}]
keywords = ["fedex", "shipping", "tracking", "rates", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://developer.fedex.com/api/en-us/home.html"
Documentation = "https://developer.fedex.com/api/en-us/catalog.html"

[tool.setuptools.packages.find]
where = ["src"]
